add accountability service basic server in hapijs

--- a/services/accountability/package.json
+++ b/services/accountability/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jcao02/lafabrika-backoffice-backend/issues"
   },
-  "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme"
+  "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
+  "dependencies": {
+    "hapi": "^18.1.0"
+  }
 }
