--- a/services/accountability/Dockerfile
+++ b/services/accountability/Dockerfile
@@ -8,3 +8,11 @@ RUN apt-get install -y gnupg
 RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 RUN apt-get install -y postgresql-client-9.6
 
+RUN mkdir -p /app
+WORKDIR /app
+
+COPY . /app
+
+RUN npm i
+EXPOSE 3000
+ENTRYPOINT ["npm", "start"]
