--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     depends_on:
       - db
 
-  # Authentication service
+  # Users service
   users:
     build: services/users
     volumes:
