--- a/models/objection/package.json
+++ b/models/objection/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
   "dependencies": {
     "knex": "^0.16.3",
+    "objection": "^1.6.7",
     "pg": "^7.9.0"
   }
 }
