--- a/services/migrations/docker-compose.yml
+++ b/services/migrations/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3"
 services:
-  # Database service (pre-built image)
-  db:
-    image: lafabrika/database:0.0.1
-    restart: always
-
   # Migrations service
   migrations:
     build: .
     volumes:
       - ./:/migrations
-    depends_on:
-      - db
+    networks:
+      - internal
+    external_links:
+      - lafabrika-database:db
+
+networks:
+  internal:
+    external: true
