remove unnecessary test database

--- a/services/migrations/sqitch.conf
+++ b/services/migrations/sqitch.conf
@@ -3,11 +3,9 @@
 	plan_file = sqitch.plan
 	top_dir = .
 [engine "pg"]
-	uri = db:pg://sqitch:sqitch@db/lafabrika_development
+	uri = db:pg://sqitch:sqitch@db/lafabrika
 	registry = sqitch
 [deploy]
 	verify = true
-[target "development"]
-	uri = db:pg://sqitch:sqitch@db/lafabrika_development
-[target "test"]
-	uri = db:pg://sqitch:sqitch@db/lafabrika_test
+[target "lafabrika"]
+	uri = db:pg://sqitch:sqitch@db/lafabrika
