add volume to host user sqitch.conf

--- a/services/migrations/docker-compose.yml
+++ b/services/migrations/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build: .
     volumes:
       - ./:/migrations
+      - ~/.sqitch/:/home/.sqitch
+    environment:
+      - SQITCH_USER_CONFIG=/home/.sqitch/sqitch.conf
     networks:
       - internal
     external_links:
