--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -4,7 +4,7 @@
   "description": "La Fábrika authentication related operations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
