--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
   "dependencies": {
+    "boom": "^7.3.0",
     "hapi": "^18.1.0",
+    "joi": "^14.3.1",
     "lafabrika-objection-models": "file:../../models/objection"
   },
   "devDependencies": {
