feat(authentication): add /sign-in endpoint (#21)
* add jasmine specs and models library

* update package-lock.json

* use jasmine as test script

* install boom for errors and joi for route validations

* add sign-in handler and endpoint

* add sign-in handle specs

* update package-lock.json

* add jsonwebtoken library

* update package-lock.json

* refactor tests and add success case

* refactor: add AuthenticationManager class and TokenGenerator class

* refactor: use new classes in handler and specs

* refactor: remove token generation from AuthenticationManager to reduce its complexity

* add AuthenticationManager specs

--- a/services/authentication/package.json
+++ b/services/authentication/package.json
@@ -4,7 +4,7 @@
   "description": "La Fábrika authentication related operations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
   "dependencies": {
-    "hapi": "^18.1.0"
+    "boom": "^7.3.0",
+    "hapi": "^18.1.0",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "lafabrika-objection-models": "file:../../models/objection"
+  },
+  "devDependencies": {
+    "jasmine": "^3.4.0"
   }
 }
