--- a/services/users/Dockerfile
+++ b/services/users/Dockerfile
@@ -1,12 +1,4 @@
-FROM node:dubnium-stretch
-
-RUN apt-get update
-RUN apt-get install -y wget libpq-dev
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main" >> /etc/apt/sources.list.d/pgdg.list
-
-RUN apt-get install -y gnupg
-RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
-RUN apt-get install -y postgresql-client-9.6
+FROM lafabrika/node-postgres-client
 
 RUN mkdir -p /app
 WORKDIR /app
