add missing env variables and internal network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,16 @@ services:
   # Authentication service
   authentication:
     build: services/authentication
+    environment:
+      - PG_CONNECTION_URI=postgres://lafabrika:lafabrika@db/lafabrika
+      - JWT_PRIV_KEY=MY_TOKEN
     volumes:
       - ./services/authentication:/app
       - ./models/objection:/app/../../models/objection
     ports:
       - "3001:3000"
+    networks:
+      - internal
     depends_on:
       - db
 
