--- a/services/users/package.json
+++ b/services/users/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
   "dependencies": {
-    "hapi": "^18.1.0"
+    "hapi": "^18.1.0",
+    "lafabrika-objection-models": "file:../../models/objection"
   }
 }
