add internal network and models volume to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,11 @@ services:
       - ./environment/common.env
     volumes:
       - ./services/users:/app
+      - ./models/objection:/app/../../models/objection
     ports:
       - "3002:3000"
+    networks:
+      - internal
     depends_on:
       - db
 
