add jwt auth to server

--- a/services/users/package.json
+++ b/services/users/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
   "dependencies": {
     "hapi": "^18.1.0",
+    "hapi-auth-jwt2": "^8.3.0",
     "lafabrika-objection-models": "file:../../models/objection"
   },
   "devDependencies": {
