add POST /admin/users (#31)
* add jwt auth to server

* add authentication, authorization and some validation to POST /admin/user

* add role validation

* remove unnecessary jwt config

* add password validation specs

* enclose error specs in Errors describe

* add success spec

* convert user-manager methods to static methods

* complete success spec

* update package-lock.json

* add PATCH /admin/users/{id} (#32)

* add success spec and auth specs

* add email validation spec

* add password length and role validations

* add PATH /users/{id} (#33)

* add selfScope to validateFn

* add route validations and success specs

* add authentication and authorization specs

* add validation specs

--- a/services/users/package.json
+++ b/services/users/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
   "dependencies": {
     "hapi": "^18.1.0",
+    "hapi-auth-jwt2": "^8.3.0",
+    "joi": "^14.3.1",
     "lafabrika-objection-models": "file:../../models/objection"
   },
   "devDependencies": {
