--- a/services/users/package.json
+++ b/services/users/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
   "dependencies": {
+    "boom": "^7.3.0",
     "hapi": "^18.1.0",
     "hapi-auth-jwt2": "^8.3.0",
     "joi": "^14.3.1",
