feat(users): add users CRUD and basic server configuration (#30)
* add common environment file

* add common env to all services

* add users CRUD boilerplate

* install local package models

* add user-manager class to handle the user CRUD

* add handlers basic functionality

* update package-lock.json

* prepend admin to admin-only routes

* fix user-manager export

* add testing dependencies

* add jasmine init

* add specs for createUser method

* add specs for updateUser method

* add specs for getUsers

* add specs for getUser method

* add specs for deleteById method

* add internal network and models volume to docker-compose

* update package-lock.json

* add POST /admin/users (#31)

* add jwt auth to server

* add authentication, authorization and some validation to POST /admin/user

* add role validation

* remove unnecessary jwt config

* add password validation specs

* enclose error specs in Errors describe

* add success spec

* convert user-manager methods to static methods

* complete success spec

* update package-lock.json

* add PATCH /admin/users/{id} (#32)

* add success spec and auth specs

* add email validation spec

* add password length and role validations

* add PATH /users/{id} (#33)

* add selfScope to validateFn

* add route validations and success specs

* add authentication and authorization specs

* add validation specs

* split routes and specs in smaller files (#34)

* split routes and specs in smaller files

* fix user show handler and add specs (#35)

* fix user show handler and add specs

* fix delete handler and specs (#36)

* fix delete handler and specs

* fix list handler and add specs (#37)

* separate validate function from server

* fix validation function and add specs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,8 @@ services:
   # Authentication service
   authentication:
     build: services/authentication
-    environment:
-      - PG_CONNECTION_URI=postgres://lafabrika:lafabrika@db/lafabrika
-      - JWT_PRIV_KEY=MY_TOKEN
+    env_file:
+      - ./environment/common.env
     volumes:
       - ./services/authentication:/app
       - ./models/objection:/app/../../models/objection
@@ -29,16 +28,23 @@ services:
   # Users service
   users:
     build: services/users
+    env_file:
+      - ./environment/common.env
     volumes:
       - ./services/users:/app
+      - ./models/objection:/app/../../models/objection
     ports:
       - "3002:3000"
+    networks:
+      - internal
     depends_on:
       - db
 
   # Accountability service
   accountability:
     build: services/accountability
+    env_file:
+      - ./environment/common.env
     volumes:
       - ./services/accountability:/app
     ports:
