--- a/services/users/package.json
+++ b/services/users/package.json
@@ -4,7 +4,7 @@
   "description": "La Fábrika users related operations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/jcao02/lafabrika-backoffice-backend#readme",
   "dependencies": {
-    "hapi": "^18.1.0"
+    "boom": "^7.3.0",
+    "hapi": "^18.1.0",
+    "hapi-auth-jwt2": "^8.3.0",
+    "joi": "^14.3.1",
+    "lafabrika-objection-models": "file:../../models/objection"
+  },
+  "devDependencies": {
+    "faker": "^4.1.0",
+    "jasmine": "^3.4.0"
   }
 }
