--- a/models/objection/package.json
+++ b/models/objection/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "knex": "^0.16.3",
     "objection": "^1.6.7",
+    "objection-db-errors": "^1.1.1",
     "pg": "^7.9.0"
   },
   "devDependencies": {
